--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,6 @@
 .blue{color: #004168;}
 .dblue{color: #00123f;}
+.lblue{color: #306da6;}
 // Then import Bootstrap an BootstrapVue SCSS files (order is important)
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'node_modules/bootstrap-vue/src/index.scss';
@@ -16,3 +17,7 @@ body,html{font-size: 15px;}
 .btn-light{color: #3a3f43; border: 2px solid #3a3f43; padding: 0.6rem 0;}
 .btn-light:hover{border: 2px solid #3a3f43; }
 .bold{font-weight: 500;}
+.container-fluid{margin:0; padding:0; overflow: hidden;}
+.fbg{font-family: 'brandon-grotesque';
+
+}
